--- a/packages/Avatar/style.css
+++ b/packages/Avatar/style.css
@@ -34,22 +34,22 @@
 @value huge: 4.5rem;
 @value ratio: 2.25;
 
-.small {
+.size-small {
   width: small;
   height: small;
 }
 
-.normal {
+.size-normal {
   width: normal;
   height: normal;
 }
 
-.large {
+.size-large {
   width: large;
   height: large;
 }
 
-.huge {
+.size-huge {
   width: huge;
   height: huge;
 }
@@ -59,22 +59,22 @@
  * used for text avatar container
  */
 
-.text.small {
+.text.size-small {
   font-size: calc(small / ratio);
   line-height: small;
 }
 
-.text.normal {
+.text.size-normal {
   font-size: calc(normal / ratio);
   line-height: normal;
 }
 
-.text.large {
+.text.size-large {
   font-size: calc(large / ratio);
   line-height: large;
 }
 
-.text.huge {
+.text.size-huge {
   font-size: calc(huge / ratio);
   line-height: huge;
 }
