--- a/packages/AvatarEditor/style.css
+++ b/packages/AvatarEditor/style.css
@@ -11,7 +11,32 @@
   composes: transition;
 }
 
-.item {
-  composes: transition;
-  display: inline-block;
+.editor {
+  position: relative;
+  text-align: center;
+  z-index: 1;
+}
+
+.background {
+  position: relative;
+  z-index: -1;
+}
+
+.overlay {
+  composes: fill from '@rabbitcc/stylekit/fill.css';
+  background-color: #000;
+  opacity: 0.2;
+  z-index: 0;
+}
+
+.area {
+  position: fixed;
+  background-color: blue;
+  border: 1px solid blue;
+  line-height: 0;
+  outline: 600px solid rgba(0, 0, 0, 0.28);
+}
+
+.preview {
+  display: none;
 }
